tests/ui/imports/extern-crate-self/extern-crate-self-fail.stderr
error: `extern crate self;` requires renaming
  --> $DIR/extern-crate-self-fail.rs:1:1
   |
LL | extern crate self;
   | ^^^^^^^^^^^^^^^^^^
   |
help: rename the `self` crate to be able to import it
   |
LL | extern crate self as name;
   |                   +++++++

error: `#[macro_use]` is not supported on `extern crate self`
  --> $DIR/extern-crate-self-fail.rs:3:1
   |
LL | #[macro_use]
   | ^^^^^^^^^^^^

error: aborting due to 2 previous errors

